--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.26.3",
     "react-youtube": "^10.1.0",
     "web-vitals": "^2.1.4"
   },
